--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,64 @@
+/*Custom Text for Headings, Paragraphs, etc*/
 h1 {
-    color: rgb(190, 28, 185);
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 20px;
+  text-decoration-line: underline;
+  text-decoration-style: double;
+  /* border-bottom: double 3px; */
+  padding-top: 5px;
 }
 
 .custom-paragraph {
-  font-size: 12px !important; 
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.6);
+  text-align: none;
 }
 
+/*Custom Cursor*/
 body {
   cursor: url('images/pcb-cursor.png'), auto !important;
 }
 
-a:hover , button:hover {
+a:hover,
+button:hover {
   cursor: url('images/pw-hover-cursor.png'), auto !important;
 }
 
-/* Apply styles to the canvas element */
-canvas {
-  border: 2px solid #12055b; /* Blue border with a width of 2 pixels */
-  background-color: #F0F0F0; /* Light gray background color */
-  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.8); /* Retro shadow effect */
-  border-radius: 0px; /* Rounded corners */
+/* Background Design */
+
+html, body {
+  height: 100%; /* Ensure the HTML and body elements occupy the full viewport height */
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
+  overflow: hidden; /* Prevent scrolling (if needed) */
+
+  background: linear-gradient(to bottom,#1f0b8d 0%, #190974 15%, #12055b 25%, #0e0446 35%, #080228 55%, #05011C 65%, #05011C 100%);
 }
 
+
+/* Canvas Styles */
+canvas {
+  border: 2px solid #12055b;
+  /* Blue border with a width of 2 pixels */
+  background-color: #F0F0F0;
+  /* Light gray background color */
+  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.8);
+  /* Retro shadow effect */
+  border-radius: 0px;
+  /* Rounded corners */
+}
+
+/* '98 Window Design for pawNG*/
 :root {
-  --button-background:#a1b5ff;
+  --button-background: #b7c6fd;
+  --button-border: #91abff;
 }
 
 .xButton {
   width: 15px;
   height: 15px;
-  padding-bottom: 5px;
-  font-family: Arial, sans-serif;
+  padding-bottom: 1px;
+  font-family: sans-serif;
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   background-color: var(--button-background);
   border-color: var(--button-background);
@@ -54,7 +82,7 @@ canvas {
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   background-color: var(--button-background);
   border-color: var(--button-background);
-  
+
 }
 
 .topBar {
@@ -67,10 +95,239 @@ canvas {
   font-family: Arial, sans-serif;
   font-size: 14px;
   padding-left: 5px;
-  color:rgb(255, 255, 255)
+  color: rgb(255, 255, 255)
 }
 
 .oldWindow {
   border: 2px solid #300ef1;
   box-shadow: 0 0px 0px rgba(18, 5, 91, 0.8);
+}
+
+/*'98 Window Design*/
+
+.navWindow {
+  border: 2px outset #5d82fc;
+  border-radius: 0px; 
+  box-shadow: 7px 7px 7px rgba(5, 1, 28, 0.5);
+  background-color: #3060ff;
+  
+}
+
+.custom-windowSubtitle {
+  font-size: 12px;
+  font-family: sans-serif;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.custom-windowTitle {
+  font-size: 13px;
+  font-family: sans-serif;
+  color: rgba(255, 255, 255, 0.6);
+  padding-left: 5px;
+  padding-top: 0px;
+}
+
+.window-bodyText {
+  font-size: 12px;
+  font-family: sans-serif;
+  color: rgba(6, 1, 33, 0.848);
+  text-align: center;
+  padding-left: 5px;
+  padding-top: 3px;
+}
+
+/*INDEX NAVIGATION & buttons*/
+
+/*Index - aboutMEow buttons*/
+.aboutButton {
+  width: 50px;
+  height: 20px;
+  font-size: 12px;
+  padding-bottom: 0px;
+  font-family: sans-serif;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  background-color: var(--button-background);
+  border: 2px outset var(--button-border);
+}
+
+.xAboutButton {
+  width: 15px;
+  height: 15px;
+  padding-bottom: 2px;
+  padding-right: 2px;
+  padding-top: 2px;
+  padding-left: 2px;
+  font-size: 12px;
+  font-family: sans-serif;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  background-color: var(--button-background);
+  border-color: var(--button-background);
+}
+
+.aboutButton:active, .xAboutButton:active {
+  /* Add pressed effect styles here */
+  background-color: #b7c6fd; /* Example background color when pressed */
+  transform: translateY(2px); /* Example downward shift when pressed */
+}
+
+/*Index - pawNG buttons*/
+
+.pawNGButton {
+  width: 50px;
+  height: 20px;
+  font-size: 12px;
+  padding-bottom: 0px;
+  font-family: sans-serif;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  background-color: var(--button-background);
+  border: 2px outset var(--button-border);
+}
+
+.xpawNGButton {
+  width: 15px;
+  height: 15px;
+  padding-bottom: 2px;
+  padding-right: 2px;
+  padding-top: 2px;
+  padding-left: 2px;
+  font-size: 12px;
+  font-family: sans-serif;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  background-color: var(--button-background);
+  border-color: var(--button-background);
+}
+
+.pawNGButton:active, .xpawNGButton:active {
+  /* Add pressed effect styles here */
+  background-color: #b7c6fd; /* Example background color when pressed */
+  transform: translateY(2px); /* Example downward shift when pressed */
+}
+
+/*Index - Welcome box & buttons */
+
+/*This is the white box that the main text appears in.*/
+.text-card {
+  background-color: #b7c6fd;
+  font-size: 13px;
+  font-family: sans-serif;
+  border: 2px inset #5d82fc;
+
+}
+
+/*Scroll bar within text box*/
+
+/* Target the container with the scrollbar */
+.text-card::-webkit-scrollbar {
+  width: 15px; 
+  border-radius: 0px;
+}
+
+/* Style the scrollbar thumb (the draggable part) */
+.text-card::-webkit-scrollbar-thumb {
+  background-color: #7595ff; 
+  border: outset 2px var(--button-border)
+}
+
+/* Style the scrollbar track (the non-draggable part) */
+.text-card::-webkit-scrollbar-track {
+  background-color: #99b1ff; 
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.navWindow {
+  border: 2px outset #5d82fc;
+  border-radius: 0px; 
+  box-shadow: 7px 7px 7px rgba(5, 1, 28, 0.5);
+  background-color: #3060ff;
+  
+}
+
+.topBar {
+  background: linear-gradient(to right, rgb(8, 2, 40), rgb(41, 12, 205));
+  box-shadow: 0 0px 0px rgba(18, 5, 91, 0.8);
+  border: 1px solid #300ef1;
+}
+
+.custom-windowTitle {
+  font-size: 13px;
+  font-family: sans-serif;
+  color: rgba(255, 255, 255, 0.6);
+  padding-left: 5px;
+  padding-top: 0px;
+}
+
+.window-welcomeText {
+  font-size: 12px;
+  font-family: 'Courier New', Courier, monospace;
+  color: rgba(6, 1, 33, 0.848);
+  text-align: left;
+  padding-left: 5px;
+  padding-top: 3px;
+}
+
+.xWelcomeButton {
+  width: 15px;
+  height: 15px;
+  font-size: 12px;
+  font-family: sans-serif;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  background-color: var(--button-background);
+  border-color: var(--button-background);
+}
+
+.maxWelcomeButton {
+  width: 15px;
+  height: 15px;
+  font-size: 12px;
+  font-family: sans-serif;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  background-color: var(--button-background);
+  border-color: var(--button-background);
+}
+
+.minWelcomeButton {
+  width: 15px;
+  height: 15px;
+  font-size: 12px;
+  font-family: sans-serif;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  background-color: var(--button-background);
+  border-color: var(--button-background);
+}
+
+/*Test Pop Up*/
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+/* Styles for the pop-up content */
+.popup-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2px;
+  border: 2px outset #5d82fc;
+  border-radius: 0px; 
+  box-shadow: 7px 7px 7px rgba(5, 1, 28, 0.5);
+  background-color: #3060ff;
+}
+
+/* Style for the close button (×) */
+.close {
+  width: 15px;
+  height: 15px;
+  font-size: 12px;
+  font-family: sans-serif;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
+  background-color: var(--button-background);
+  border-color: var(--button-background);
+  cursor: url('images/pw-hover-cursor.png'), auto;
 }
