--- a/styles.css
+++ b/styles.css
@@ -214,26 +214,6 @@ canvas {
 
 }
 
-/*Scroll bar within text box*/
-
-/* Target the container with the scrollbar */
-.text-card::-webkit-scrollbar {
-  width: 15px; 
-  border-radius: 0px;
-}
-
-/* Style the scrollbar thumb (the draggable part) */
-.text-card::-webkit-scrollbar-thumb {
-  background-color: #7595ff; 
-  border: outset 2px var(--button-border)
-}
-
-/* Style the scrollbar track (the non-draggable part) */
-.text-card::-webkit-scrollbar-track {
-  background-color: #99b1ff; 
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
 .navWindow {
   border: 2px outset #5d82fc;
   border-radius: 0px; 
@@ -265,6 +245,28 @@ canvas {
   padding-top: 3px;
 }
 
+/*Scroll bar within text box*/
+
+/* Target the container with the scrollbar */
+.text-card::-webkit-scrollbar {
+  width: 15px; 
+  border-radius: 0px;
+}
+
+/* Style the scrollbar thumb (the draggable part) */
+.text-card::-webkit-scrollbar-thumb {
+  background-color: #7595ff; 
+  border: outset 2px var(--button-border)
+}
+
+/* Style the scrollbar track (the non-draggable part) */
+.text-card::-webkit-scrollbar-track {
+  background-color: #99b1ff; 
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+/*Buttons*/
+
 .xWelcomeButton {
   width: 15px;
   height: 15px;
@@ -295,7 +297,7 @@ canvas {
   border-color: var(--button-background);
 }
 
-/*Test Pop Up*/
+/*Pop Up Styles*/
 
 .popup {
   display: none;
