--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1 {
   text-align: none;
 }
 
-/*Custom Cursor*/
+/* Custom Cursor
 body {
   cursor: url('images/pcb-cursor.png'), auto !important;
 }
@@ -29,7 +29,7 @@ body {
 a:hover,
 button:hover {
   cursor: url('images/pw-hover-cursor.png'), auto !important;
-}
+} */
 
 /* Background Design */
 
@@ -187,7 +187,7 @@ canvas {
 
 /*Scroll bar within text box*/
 
-/* Target the container with the scrollbar */
+/*Target the container with the scrollbar*/
 .text-card::-webkit-scrollbar, .scroll-container::-webkit-scrollbar {
   width: 15px; 
   border-radius: 0px;
@@ -203,6 +203,35 @@ canvas {
 .text-card::-webkit-scrollbar-track, .scroll-container::-webkit-scrollbar-track  {
   background-color: #99b1ff; 
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+/* Create an up arrow above the scrollbar thumb */
+.text-card::-webkit-scrollbar-thumb::before, .scroll-container::-webkit-scrollbar-thumb::before{
+  content: "";
+  position: absolute;
+  top: -10px; /* Adjust the position as needed */
+  left: 3px; /* Adjust the position as needed */
+  width: 8px;
+  height: 8px;
+  border-left: 2px solid transparent;
+  border-right: 2px solid transparent;
+  border-bottom: 2px solid #7595ff;
+  background-color: #7595ff;
+}
+
+
+/* Create a down arrow below the scrollbar thumb */
+.text-card::-webkit-scrollbar-thumb::after, .scroll-container::-webkit-scrollbar-thumb::after {
+  content: "";
+  position: absolute;
+  bottom: -10px; /* Adjust the position as needed */
+  left: 3px; /* Adjust the position as needed */
+  width: 8px;
+  height: 8px;
+  border-left: 2px solid transparent;
+  border-right: 2px solid transparent;
+  border-top: 2px solid #7595ff;
+  background-color: #7595ff;
 }
 
 
@@ -240,5 +269,5 @@ canvas {
   box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   background-color: var(--button-background);
   border-color: var(--button-background);
-  cursor: url('images/pw-hover-cursor.png'), auto;
+  /* cursor: url('images/pw-hover-cursor.png'), auto; */
 }
